UI work is done wrt to UX from yumei

--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -8,7 +8,7 @@
     <div class="col-sm-8 col-sm-offset-2 home_image">
       {% load static %}
       <center>
-      <img src="{% static 'icon/logo-dark.png' %}" class="img-responsive" width="60%" height="auto" style="margin-top:10px">
+      <img src="{% static 'icon/logo-withname.png' %}" class="img-responsive" width="60%" height="auto" style="margin-top:10px">
       </center>
       </div>
   </div>
@@ -30,7 +30,7 @@
   <div class="row">
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
-      <h3 style="font-size: 21px; color:#34495c;" class="text-center">On-demand, effective and personalized coaching on communication skills <br> at 1/100th the cost of the world's best professional coaches.</h3>
+      <p style="font-size: 24px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1.5px;" class="text-center" >On-demand, effective and personalized coaching on communication skills at 1/100th the cost of the world's best professional coaches.</p>
     </div>
     <div class="col-sm-2"></div>
   </div>
@@ -43,36 +43,37 @@
 <div class="WhyTalkMeUp">
   <section id="why-talkmeup">
     <div class="col-sm-10 col-sm-offset-1">
-	    <h1 class="text-center" style="font-size: 5.6rem;font-weight: 600; color: #34495c; margin-top: 80px;">
+	    <h1 class="text-center" style="font-size: 48px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 6px; margin-top:80px;">
         Why TalkMeUp
       </h1>
       <br>
       <br>
       <center>
         <div class="col-sm-4">
-            <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Accessible</h2>
+            <h2 style="font-size: 32px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 2px; margin-buttom:40px;">Accessible</h2>
             <img src="{% static 'icon/accessible.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
             <br>
-            <p style="font-size: 20px;">Your Just-in-time coach</p>
+            <p style="font-size: 22px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">TalkMeUp is at your service <p style="font-size: 22px; color:#30A596; font-family:'Open Sans' script=latin rev=1; font-style:normal; letter-spacing: 1px;">24/7.</p>
+
           </div>
 
           <div class="col-sm-4">
-            <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Effective</h2>
+            <h2 style="font-size: 32px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 2px; margin-buttom:40px;">Effective</h2>
             <img src="{% static 'icon/effective.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
             <br>
-            <p style="font-size: 20px;">Personalized coaching to drive progress</p>
+            <p style="font-size: 22px; color:#30A596; font-family:'Open Sans' script=latin rev=1; font-style:normal; letter-spacing: 1px;">Personalized<p style="font-size: 22px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">coaching that drives progress. </p>
           </div>
           <div class="col-sm-4">
-            <h2 style="font-size: 2.8rem;font-weight:700; margin-bottom:25px; color: #34495c">Affordable</h2>
+            <h2 style="font-size: 32px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 2px; margin-buttom:40px;">Affordable</h2>
             <img src="{% static 'icon/affordablelight.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
             <br>
-            <p style="font-size: 20px;">Stating at <span style="color:#EEC15E">$0</span> a month</p>
+            <p style="font-size: 22px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">Stating at <p style="font-size: 22px; color:#30A596; font-family:'Open Sans' script=latin rev=1; font-style:normal; letter-spacing: 1px;">$0 per month.</p>
           </div>
     </center>
         </div>
@@ -83,7 +84,7 @@
 <div class="PersonalTrain">
   <section id="presentation-interview">
     <div class="col-sm-10 col-sm-offset-1" style="margin-top: 0px">
-      <h1 class="text-center" style="font-size: 5.6rem;font-weight: 600; color: #34495c; margin-top: 80px;">
+      <h1 class="text-center" style="font-size: 48px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 4px; margin-top:80px;">
         For Consumers
       </h1>
       <br>
@@ -91,26 +92,26 @@
       <br>
           <center>
           <div class="col-sm-4">
-            <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Presentation</h2>
+            <h2 style="font-size: 32px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 2px; margin-buttom:40px;">Presentation</h2>
             <img src="{% static 'icon/presentationdark.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
-            <p style="font-size: 20px;">A good presentation satisfies your audience and helps you gain buy-in.</p>
+            <p style="font-size: 22px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">A good presentation satisfies your audience and helps you gain buy-in.</p>
           </div>
 
           <div class="col-sm-4">
-            <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Job Interview</h2>
+            <h2 style="font-size: 32px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 2px; margin-buttom:40px;">Job Interview</h2>
             <img src="{% static 'icon/interviewdark.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
-            <p style="font-size: 20px;">Delivering your value properly gets you in the door.</p>
+            <p style="font-size: 22px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">Delivering your value properly gets you in the door.</p>
           </div>
           <div class="col-sm-4">
-            <h2 style="font-size: 2.8rem;font-weight:700; margin-bottom:25px; color: #34495c">Leadership</h2>
+            <h2 style="font-size: 32px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 2px; margin-buttom:40px;">Leadership</h2>
             <img src="{% static 'icon/leadership.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
-            <p style="font-size: 20px;">Show your team that you are the one to trust and follow.</p>
+            <p style="font-size: 22px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">Show your team that you are the one to trust and follow.</p>
           </div>
           </center>
         </div>
@@ -123,7 +124,7 @@
 <div class="CompanyTrain" id="pilot">
   <section id="talkmeup-about">
       <div class="col-sm-10 col-sm-offset-1" style="margin-top: 0px">
-      <h1 class="text-center" style="font-size: 5.6rem;font-weight: 600; color: #34495c; margin-top: 80px;">
+      <h1 class="text-center" style="font-size: 48px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 6px; margin-top:80px;">
         For Enterprises
       </h1>
       <br>
@@ -133,19 +134,19 @@
       <div class="col-sm-10 col-sm-offset-2" style="margin-top: 0px">
           <center>
           <div class="col-sm-4">
-            <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Employee</h2>
+            <h2 style="font-size: 32px; color:0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 2px; margin-buttom:40px;">Employee</h2>
             <img src="{% static 'icon/employeelight.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
-            <p style="font-size: 20px;">TalkMeUp equips every employee with a smart coach that is always available on his/her mobile device.</p>
+            <p style="font-size: 22px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">TalkMeUp equips every employee with a smart coach that is always available on his/her mobile device.</p>
           </div>
 
           <div class="col-sm-4 col-sm-offset-2">
-            <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Company</h2>
+            <h2 style="font-size: 32px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 2px; margin-buttom:40px;">Company</h2>
             <img src="{% static 'icon/company.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
-            <p style="font-size: 20px;">TalkMeUp can be easily tailored for enterprises. It provides analytical support to make employee development adaptable, measurable and manageable.</p>
+            <p style="font-size: 22px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">TalkMeUp can be easily tailored for enterprises. It provides analytical support to make employee development adaptable, measurable and manageable.</p>
           </div>
           </center>
         </div>
@@ -158,7 +159,7 @@
 
 
 <section id="testmonial">
-  <div class="row" style="background-color:#ecddb9;margin-right: auto;margin-left: auto;margin-top: 100px;">
+  <div class="row" style="background-color:#30A596;margin-right: auto;margin-left: auto;margin-top: 100px;">
     <br>
     <br>
     <div class="col-md-3" style="visibility:hidden">
@@ -172,16 +173,16 @@
         <div class="carousel-inner" style="font-size: 20px;">
           <div class="item active">
             <center>
-              <p>“We piloted TalkMeUp in my Management Presentations class, improving class participation by 5X. Further, students who used TalkMeUp are maintaining their presentation skills at a higher level after the course when compared with those who relied on less robust forms of feedback."</p>
-              <small>--Prof. Ron Placone</small>
-              <br>
+              <p style="font-size: 22px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:italic; letter-spacing: 1px;">“We piloted TalkMeUp in my Management Presentations class, improving class participation by 5X. Further, students who used TalkMeUp are maintaining their presentation skills at a higher level after the course when compared with those who relied on less robust forms of feedback."</p>
+              <p style="font-size: 18px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">-- Prof. Ron Placone</p>
+                <center>
+              <p style="font-size: 18px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
+            </center>
               <br>
               </center>
               </div>
               <div class="carousel-inner" style="font-size: 16px;">
-              <center>
-              <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
-            </center>
+
             </div>
           </div>
           <br>
