--- a/talkmeup/static/style.css
+++ b/talkmeup/static/style.css
@@ -1,8 +1,9 @@
 body {
   padding-top: 70px;
   padding-bottom: 30px;
-  background-color: #F2F3F4;
-  position: relative; 
+  background: #0A2645; /* For browsers that do not support gradients */
+  background: linear-gradient(to right, #0A2645, #0B1720);
+  position: relative;
 }
 .LandingPage {
   min-height: 750px;
@@ -26,10 +27,10 @@ body {
   min-height: 750px;
 }
 
-#trydemo { 
- 	width: 0; 
- 	height: 0; 
- 	border-top: 100px solid #EEC153; 
+#trydemo {
+ 	width: 0;
+ 	height: 0;
+ 	border-top: 100px solid #EEC153;
  	border-left: 100px solid transparent;
  	position: absolute;
     z-index: 101;
@@ -40,39 +41,40 @@ body {
  	 }
 
 .nav-color{
-    background-color: white;
-	  border-bottom: 2px solid #34495c;
+    background: #0A2645; /* For browsers that do not support gradients */
+    background: linear-gradient(to right, #0A2645, #0B1720);
+	  border-bottom: 2px solid #30A596;
 }
 
 #corner-ad {
   display: block;
-  width: 190px;
-  height: 200px;
-  background: green;
+  float: right;
   position: absolute;
-  top: -107px;
-  right: -98px;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  box-shadow: 0px 1px 1px 1px #51373766;
+  right:-30px;
+  top: -30px;
+  transform: scale(0.7, 0.7);
 }
 
 #corner-ad2 {
   display: none;
-  width: 190px;
-  height: 200px;
-  background: green;
   position: absolute;
-  top: -107px;
-  right: -98px;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  box-shadow: 0px 1px 1px 1px #51373766;
+  right:-30px;
+  top: -30px;
+  transform: scale(0.7, 0.7);
+  position: absolute;
 }
+
+
+ul.nav > li > a {
+ color: white !important;
+ font-family:'Open Sans' script=latin rev=1;
+ font-weight: lighter;
+ font-style:normal;
+ letter-spacing: 1.5px;
+
+}
+
+
 
 a:link, a:visited, a:focus, a:active {
 	outline: none;
@@ -81,7 +83,7 @@ a:link, a:visited, a:focus, a:active {
 
 
 /* carousel */
-#quote-carousel 
+#quote-carousel
 {
   padding: 0 10px 30px 10px;
   margin-top: 30px;
@@ -104,7 +106,7 @@ a:link, a:visited, a:focus, a:active {
 }
 
 /* Changes the position of the indicators */
-#quote-carousel .carousel-indicators 
+#quote-carousel .carousel-indicators
 {
   right: 50%;
   top: auto;
@@ -112,11 +114,11 @@ a:link, a:visited, a:focus, a:active {
   margin-right: -19px;
 }
 /* Changes the color of the indicators */
-#quote-carousel .carousel-indicators li 
+#quote-carousel .carousel-indicators li
 {
   background: #EEC153;
 }
-#quote-carousel .carousel-indicators .active 
+#quote-carousel .carousel-indicators .active
 {
   background: #333333;
 }
@@ -128,7 +130,7 @@ a:link, a:visited, a:focus, a:active {
 /* End carousel */
 
 .item blockquote {
-    border-left: none; 
+    border-left: none;
     margin: 0;
 }
 
@@ -150,22 +152,22 @@ a:link, a:visited, a:focus, a:active {
 */
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
-    #quote-carousel 
+@media (min-width: 768px) {
+    #quote-carousel
     {
       margin-bottom: 0;
       padding: 0 40px 30px 40px;
     }
-    
+
 }
 
 /* Small devices (tablets, up to 768px) */
-@media (max-width: 768px) { 
-    
+@media (max-width: 768px) {
+
     /* Make the indicators larger for easier clicking with fingers/thumb on mobile */
-    
+
     #quote-carousel .carousel-indicators {
-        bottom: -45px !important;  
+        bottom: -45px !important;
     }
     #quote-carousel .carousel-indicators li {
         display: inline-block;
