--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -16,8 +16,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 
     <!-- Custom styles for this template -->
     {% load static %}
@@ -46,10 +48,11 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="margin-right: 130px;">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img alt="Brand" src="{% static 'icon/logo-dark.png' %}" class="img-responsive" style="width:130px;margin-top: -5px;">
+        <img alt="Brand" src="{% static 'icon/logo.png' %}" class="img-responsive" style="width:62px;margin-top: -10px;
+        margin-left:40px">
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -66,7 +69,7 @@
               <a href="{% url 'logout' %}">Logout</a>
             </li>
           {% endif %}
-          <li><a href="#" data-toggle="modal" data-target="#pilot">Schedule a Pilot</a></li>
+          <li><a href="#" data-toggle="modal" data-target="#pilot" >Schedule a Pilot</a></li>
           <li><a href="#" data-toggle="modal" data-target="#contact">Contact us</a></li>
           <li><a href="#" data-toggle="modal" data-target="#share">Share</a></li>
       </ul>
@@ -85,10 +88,10 @@
   <div class="modal fade" id="contact" role="dialog" data-keyboard="false" data-backdrop="static" style="top:15%;">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
-        <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
+        <div class="modal-body" style="background-color:#30A596;padding: 6%;">
           <button type="button" class="close" data-dismiss="modal" style="color: #000;font-weight: bold;margin-top: -16px;font-size: 26px;">&times;</button>
           <br>
-            <p class="text-center lead" style="font-weight:700;color:#34495c">Leave a message</p>
+            <p class="text-center lead" style="font-size: 28px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:400; font-style:bold; letter-spacing: 2px;">Leave a message</p>
             <form method="POST" action="{% url 'leave-message' %}">
               {% csrf_token %}
               <div class="form-group">
@@ -106,11 +109,11 @@
             </center></div>
 
               <center>
-                <button type="submit" class="btn btn-primary" style="background-color: #34495c;border-color: #34495c;box-shadow: 0px 1px 2px 1px #362d2db3;">
-                <span style="font-weight:700;color:#fff;font-size: 20px;">Send</span>
+                <button type="submit" class="btn btn-primary" style="background-color: #0a2645;border-color: #34495c;box-shadow: 0px 1px 2px 1px #362d2db3;">
+                <span style="font-size: 18px; color:#ecf0f1; font-family:'Open Sans' script=latin rev=1; font-weight:600; font-style:bold; letter-spacing: 2px;">Send</span>
               </button>
               </center>
-              </form> 
+              </form>
               <br>
           </div>
       </div>
@@ -121,7 +124,7 @@
   <div class="modal fade" id="share" role="dialog" data-keyboard="false" data-backdrop="static" style="top:35%;">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
-        <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
+        <div class="modal-body" style="background-color:#30A596;padding: 6%;">
           <button type="button" class="close" data-dismiss="modal" style="color: #000;font-weight: bold;margin-top: -16px;font-size: 26px;">&times;</button>
           <div class="container">
             <div class="row">
@@ -143,10 +146,10 @@
   <div class="modal fade" id="demo" role="dialog" data-keyboard="false" data-backdrop="static" style="top:20%;">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
-        <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
-          <button type="button" class="close" data-dismiss="modal" style="color: #000;font-weight: bold;margin-top: -16px;font-size: 26px;">&times;</button>
+        <div class="modal-body" style="background-color:#30A596;padding: 6%;">
+          <button type="button" class="close" data-dismiss="modal" style="color: #000;font-weight: bold;margin-top: -16px;font-size: 36px;">&times;</button>
           <br>
-            <p class="text-center lead" style="font-weight:700;color:#34495c">Sign up for our upcoming demo!</p>
+            <p class="text-center lead" style="font-size: 28px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:400; font-style:bold; letter-spacing: 2px;">Sign up for our upcoming demo!</p>
             <form method="POST" action="{% url 'personal-contact' %}">
               {% csrf_token %}
               <div class="form-group">
@@ -155,14 +158,14 @@
                 </center>
               </div>
               <center>
-              <button type="submit" class="btn btn-primary" style="background-color: #34495c;border-color: #34495c;box-shadow: 0px 1px 2px 1px #362d2db3;">
-                <span style="font-weight:700;color:#fff;font-size: 20px;">Sign Up</span>
+              <button type="submit" class="btn btn-primary" style="background-color: #0a2645;border-color: #34495c;box-shadow: 0px 1px 2px 1px #362d2db3;">
+                <span style="font-size: 18px; color:#ecf0f1; font-family:'Open Sans' script=latin rev=1; font-weight:600; font-style:bold; letter-spacing: 2px;">Sign Up</span>
               </button>
               </center>
               <center>
-              <p class="lead" style="margin-top: 15px;font-weight: 700;color:#34495c;">Or Sign in with </p>
+              <p class="text-center lead" style="font-size: 22px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:400; font-style:bold; letter-spacing: 2px; margin-top: 20px;">Or Sign in with </p>
               </center>
-              </form> 
+              </form>
               <div class="text-center">
                 <a href="{% url 'social:begin' 'facebook' %}"><img style="width: 32px;" src="{% static 'icon/facebook.png' %}"></a>
                 <a href="{% url 'social:begin' 'twitter' %}"><img style="width: 32px;" src="{% static 'icon/twitter.png' %}"></a>
@@ -181,10 +184,10 @@
   <div class="modal fade" id="pilot" role="dialog" data-keyboard="false" data-backdrop="static" style="top:25%;">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
-        <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
-          <button type="button" class="close" data-dismiss="modal" style="color: #000;font-weight: bold;margin-top: -16px;font-size: 26px;">&times;</button>
+        <div class="modal-body" style="background-color:#30A596;padding: 6%;">
+          <button type="button" class="close" data-dismiss="modal" style="color: #000;font-weight: bold;margin-top: -16px;font-size: 36px;">&times;</button>
           <br>
-            <p class="text-center lead" style="font-weight:700;color:#34495c">Schedule a free Pilot for your company!</p>
+            <p class="text-center lead" style="font-size: 28px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:400; font-style:bold; letter-spacing: 2px;">Schedule a free Pilot for your company!</p>
             <form method="POST" action="{% url 'company-contact' %}">
               {% csrf_token %}
               <div class="form-group">
@@ -193,12 +196,12 @@
                 </center>
               </div>
               <center>
-              <button type="submit" class="btn btn-primary" style="background-color: #34495c;border-color: #34495c;box-shadow: 0px 1px 2px 1px #362d2db3;">
-                <span style="font-weight:700;color:#fff;font-size: 20px;">Sign Up</span>
+              <button type="submit" class="btn btn-primary" style="background-color: #0a2645;border-color: #34495c;box-shadow: 0px 1px 2px 1px #362d2db3;">
+                <span style="font-size: 18px; color:#ecf0f1; font-family:'Open Sans' script=latin rev=1; font-weight:600; font-style:bold; letter-spacing: 2px;">Sign Up</span>
               </button>
               </center>
-              </form> 
-              <p class="text-center" style="color:#34495c;margin-top: 10px;">We will contact you within 5 business days</p>
+              </form>
+              <p class="text-center lead" style="font-size: 16px; color:#ffffff; font-family:'Open Sans' script=latin rev=1; font-weight:400; font-style:bold; letter-spacing: 2px; margin-top: 20px;">We will contact you within 5 business days</p>
               <br>
           </div>
       </div>
@@ -215,7 +218,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="pull-right" id="ButtonForScroll"><a href="#page-top" id="back_to_top_link">Back to top</a></p>
-        <p>&copy; 2017 TalkMeUp, Inc.</a></p>
+        <p><p class="pull-left" style="font-size: 14px; color:#ECF0F1; font-family:'Open Sans' script=latin rev=1; font-style:normal; letter-spacing: 0px;">&copy; 2017 TalkMeUp, Inc.</a></p>
       </footer>
 
     </main>
