--- a/demo/templates/about-you.html
+++ b/demo/templates/about-you.html
@@ -2,36 +2,25 @@
 
 {% block content %}
 <div class="charm-us">
-    <div class="loader-wrap">
-        <div class="loader">
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-        </div>
-    </div>
     <div class="container rect1">
         {% include "header.html" %}
         <div class="text-center content">
             <h2 class="title">You have <span class="orange-text">30</span> sec to charm us! </h2>
             <div class="box-shurmus">
                 <p>
-                    Think of a <span class="fun-text bold">fun</span> experience, idea, something or someone that excites
-                    you and tell us about it!
+                    Think of a <span class="fun-text bold">fun</span> experience, idea, something or someone that
+                    excites you and tell us about it!
                 </p>
                 <div class="counting-box">
                     <div id="timer" class="timing">30</div>
                 </div>
                 <div class="clearfix"></div>
                 <div class="btns">
-                    <a id="record" class="pull-left record">Record</a>
-                    <a class="pull-right upload" href="{% url "demo:check" %}">Upload</a>
+                    <button id="record" class="pull-left record">Record</button>
+                    <label class="btn-upload pull-right">
+                        <input id="file-upload" type="file" name="fileupload">
+                        <button class="upload">Upload</button>
+                    </label>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -41,6 +30,17 @@
 {% endblock %}
 {% block javascript %}
 <script>
+    $("#file-upload").change(function () {
+        var fileName = $("#file-upload").val();
+
+        if (fileName) {
+            setTimeout(function () {
+                location.href = '{% url "demo:check" %}';
+            }, 1000);
+        } else {
+            alert("no file selected");
+        }
+    });
     $("#record").click(function () {
         var counter = setInterval(timer, 1000);
         $(this).unbind("click");
