--- a/demo/templates/base_.html
+++ b/demo/templates/base_.html
@@ -14,6 +14,20 @@
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
     <body>
+        <div class="loader-wrap">
+            <div class="loader">
+                <span class="loader-item"></span>
+                <span class="loader-item"></span>
+                <span class="loader-item"></span>
+                <span class="loader-item"></span>
+                <span class="loader-item"></span>
+                <span class="loader-item"></span>
+                <span class="loader-item"></span>
+                <span class="loader-item"></span>
+                <span class="loader-item"></span>
+                <span class="loader-item"></span>
+            </div>
+        </div>
         {% block content %}{% endblock %}
         <script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"></script>
         <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
