--- a/demo/static/css/style.css
+++ b/demo/static/css/style.css
@@ -310,9 +310,9 @@ input[type="checkbox"]:checked + .label-text:before {
 }
 /* Icons
 ---------------------------------*/
-/* line 80, icons/*.png */
-.icons-sprite, .icons-facebook, .icons-google, .icons-mail, .icons-twitter, .icons-wechat {
-  background-image: url('../images/icons-sa7a938e2eb.png');
+/* line 88, icons/*.png */
+.icons-sprite, .icons-facebook, .icons-google, .icons-linkedin, .icons-mail, .icons-twitter, .icons-wechat {
+  background-image: url('../images/icons-s3a5d3ba7b4.png');
   background-repeat: no-repeat;
 }
 
@@ -331,22 +331,29 @@ input[type="checkbox"]:checked + .label-text:before {
 }
 
 /* line 84, C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/sprites/_base.scss */
-.icons-mail {
+.icons-linkedin {
   background-position: 0 -120px;
   height: 60px;
   width: 60px;
 }
 
 /* line 84, C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/sprites/_base.scss */
-.icons-twitter {
+.icons-mail {
   background-position: 0 -180px;
   height: 60px;
   width: 60px;
 }
 
 /* line 84, C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/sprites/_base.scss */
-.icons-wechat {
+.icons-twitter {
   background-position: 0 -240px;
+  height: 60px;
+  width: 60px;
+}
+
+/* line 84, C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/sprites/_base.scss */
+.icons-wechat {
+  background-position: 0 -300px;
   height: 60px;
   width: 60px;
 }
@@ -394,30 +401,40 @@ input[type="checkbox"]:checked + .label-text:before {
   border-bottom: 2px solid #2FA496;
   width: 100%;
   margin: auto;
-  padding: 18px 0 0 50px;
-  height: 77px;
+  padding: 0 0 0 50px;
+  height: 45px;
 }
-/* line 50, ../sass/partials/_layout.scss */
-.header .navbar {
+/* line 52, ../sass/partials/_layout.scss */
+.logo {
+    width: 62px;
+    margin-top: -10px;
+    margin-left: 40px;
+}
+
+/* line 61, ../sass/partials/_layout.scss */
+.navbar {
   margin-bottom: 0;
+  min-height: 52px;
+  border-bottom: 2px solid #30A596;
+  border-radius: 0;
+  height: 15px;
 }
-/* line 54, ../sass/partials/_layout.scss */
-.header .navbar .navbar-brand {
-  padding: 0;
-}
-/* line 60, ../sass/partials/_layout.scss */
-.header .logo {
-  height: 100%;
-  margin-top: 8px;
+/* line 72, ../sass/partials/_layout.scss */
+.navbar .navbar-header .navbar-brand {
+  float: left;
+  height: 50px;
+  padding: 14px 14px;
+  font-size: 18px;
+  line-height: 20px;
 }
 
 /* Content 
 ---------------------------------------*/
-/* line 73, ../sass/partials/_layout.scss */
+/* line 87, ../sass/partials/_layout.scss */
 .content {
   padding: 4% 15px;
 }
-/* line 77, ../sass/partials/_layout.scss */
+/* line 91, ../sass/partials/_layout.scss */
 .content .title {
   font-weight: 300;
 }
@@ -426,61 +443,61 @@ input[type="checkbox"]:checked + .label-text:before {
 ---------------------------------------*/
 /* Responsive 
 ---------------------------------------*/
-@media screen and (max-width: 320px) {
-  /* line 93, ../sass/partials/_layout.scss */
+@media screen and (max-width: 430px) {
+  /* line 107, ../sass/partials/_layout.scss */
   .factors .content .factors-container .btn-factors {
     font-size: 15px !important;
   }
 }
 @media screen and (max-width: 575px) {
-  /* line 100, ../sass/partials/_layout.scss */
+  /* line 114, ../sass/partials/_layout.scss */
   .home .content .btn-detect {
     padding: 10px 15px !important;
     margin: 15% 0 20% 0 !important;
     font-size: 20px !important;
   }
 
-  /* line 106, ../sass/partials/_layout.scss */
+  /* line 120, ../sass/partials/_layout.scss */
   .charm-us .content .box-shurmus {
     width: 90% !important;
     margin: auto !important;
   }
 
-  /* line 111, ../sass/partials/_layout.scss */
+  /* line 125, ../sass/partials/_layout.scss */
   .factors .content .factors-container, .tips .content .factors-container {
     width: 100% !important;
   }
 
-  /* line 115, ../sass/partials/_layout.scss */
+  /* line 129, ../sass/partials/_layout.scss */
   .tips .content .factors-container .btns .btn-tips {
     font-size: 18px !important;
     width: 40% !important;
   }
 
-  /* line 120, ../sass/partials/_layout.scss */
+  /* line 134, ../sass/partials/_layout.scss */
   .sub-text span {
     display: block !important;
   }
 
-  /* line 124, ../sass/partials/_layout.scss */
+  /* line 138, ../sass/partials/_layout.scss */
   .contact .content .share-container, .contact .content .form-container {
     width: 100% !important;
     margin: 15% auto !important;
   }
 
-  /* line 130, ../sass/partials/_layout.scss */
+  /* line 144, ../sass/partials/_layout.scss */
   .contact .content .share-container .row a {
     padding: 1px !important;
   }
 }
 @media (max-width: 991px) {
-  /* line 146, ../sass/partials/_layout.scss */
+  /* line 160, ../sass/partials/_layout.scss */
   .contact .content .form-container .sign-in, .contact .content .form-container .social-media {
     text-align: center !important;
   }
 }
 @media (max-width: 1199px) and (min-width: 576px) {
-  /* line 157, ../sass/partials/_layout.scss */
+  /* line 171, ../sass/partials/_layout.scss */
   .contact .content .share-container, .contact .content .form-container {
     width: 70% !important;
     margin: 20px auto !important;
@@ -532,20 +549,26 @@ input[type="checkbox"]:checked + .label-text:before {
 ================================ */
 /* line 11, ../sass/partials/pages/_home.scss */
 .home .header {
-  height: 70px;
+  height: 41px;
 }
-/* line 14, ../sass/partials/pages/_home.scss */
+/* line 15, ../sass/partials/pages/_home.scss */
+.home .header .navbar .navbar-brand {
+  padding: 0;
+  margin-top: -3px;
+  margin-left: -5px;
+}
+/* line 21, ../sass/partials/pages/_home.scss */
 .home .header .logo {
   height: 90%;
-  margin-top: 6px;
+  margin-top: 5px;
 }
-/* line 22, ../sass/partials/pages/_home.scss */
+/* line 29, ../sass/partials/pages/_home.scss */
 .home .content h2.title {
   font-size: 26px;
   font-weight: 300;
   letter-spacing: 5px;
 }
-/* line 29, ../sass/partials/pages/_home.scss */
+/* line 36, ../sass/partials/pages/_home.scss */
 .home .content .btn-detect {
   padding: 15px 25px;
   background: #2fa496;
@@ -557,7 +580,7 @@ input[type="checkbox"]:checked + .label-text:before {
   color: #0a2645;
   font-weight: 700;
 }
-/* line 43, ../sass/partials/pages/_home.scss */
+/* line 50, ../sass/partials/pages/_home.scss */
 .home .content .label-text {
   font-size: 15px;
   font-weight: 300;
@@ -566,22 +589,22 @@ input[type="checkbox"]:checked + .label-text:before {
 
 /* page 2
 ------------------------*/
-/* line 65, ../sass/partials/pages/_home.scss */
+/* line 72, ../sass/partials/pages/_home.scss */
 .charm-us .content {
   padding: 3% 15px;
 }
-/* line 68, ../sass/partials/pages/_home.scss */
+/* line 75, ../sass/partials/pages/_home.scss */
 .charm-us .content h2.title {
   font-size: 25px;
   font-weight: 300;
   letter-spacing: 5px;
 }
-/* line 75, ../sass/partials/pages/_home.scss */
+/* line 82, ../sass/partials/pages/_home.scss */
 .charm-us .content .box-shurmus {
   width: 40%;
   margin: auto;
 }
-/* line 81, ../sass/partials/pages/_home.scss */
+/* line 88, ../sass/partials/pages/_home.scss */
 .charm-us .content .box-shurmus p {
   width: 100%;
   text-align: justify;
@@ -590,7 +613,7 @@ input[type="checkbox"]:checked + .label-text:before {
   margin-top: 30px;
   font-weight: 400;
 }
-/* line 90, ../sass/partials/pages/_home.scss */
+/* line 97, ../sass/partials/pages/_home.scss */
 .charm-us .content .box-shurmus .counting-box {
   position: relative;
   width: 100%;
@@ -599,7 +622,7 @@ input[type="checkbox"]:checked + .label-text:before {
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   margin-bottom: 30px;
 }
-/* line 98, ../sass/partials/pages/_home.scss */
+/* line 105, ../sass/partials/pages/_home.scss */
 .charm-us .content .box-shurmus .counting-box .timing {
   position: absolute;
   top: 20px;
@@ -608,12 +631,12 @@ input[type="checkbox"]:checked + .label-text:before {
   font-weight: 300;
   color: #30a596;
 }
-/* line 112, ../sass/partials/pages/_home.scss */
+/* line 119, ../sass/partials/pages/_home.scss */
 .charm-us .content .box-shurmus .btns {
   font-size: 22px;
   font-weight: 400;
 }
-/* line 116, ../sass/partials/pages/_home.scss */
+/* line 123, ../sass/partials/pages/_home.scss */
 .charm-us .content .box-shurmus .btns .record {
   color: #0a2645;
   padding: 10px 20px;
@@ -621,8 +644,9 @@ input[type="checkbox"]:checked + .label-text:before {
   border: 0;
   border-radius: 5px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  font-weight: 600;
 }
-/* line 125, ../sass/partials/pages/_home.scss */
+/* line 133, ../sass/partials/pages/_home.scss */
 .charm-us .content .box-shurmus .btns .upload {
   color: #0a2645;
   padding: 10px 20px;
@@ -630,13 +654,31 @@ input[type="checkbox"]:checked + .label-text:before {
   border: 0;
   border-radius: 5px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  font-weight: 600;
+}
+/* line 144, ../sass/partials/pages/_home.scss */
+.charm-us .content .box-shurmus .btns .btn-upload {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+/* line 150, ../sass/partials/pages/_home.scss */
+.charm-us .content .box-shurmus .btns .btn-upload input[type=file] {
+  position: absolute;
+  opacity: 0;
+  z-index: 0;
+  max-width: 100%;
+  height: 100%;
+  display: block;
+  cursor: pointer;
+  padding: 50px;
 }
 
-/* line 154, ../sass/partials/pages/_home.scss */
+/* line 183, ../sass/partials/pages/_home.scss */
 .factors .content .check-btn {
   padding: 70px 0;
 }
-/* line 157, ../sass/partials/pages/_home.scss */
+/* line 186, ../sass/partials/pages/_home.scss */
 .factors .content .check-btn .btn {
   padding: 15px 20px;
   font-size: 20px;
@@ -646,17 +688,17 @@ input[type="checkbox"]:checked + .label-text:before {
 }
 
 /*page thanks*/
-/* line 176, ../sass/partials/pages/_home.scss */
+/* line 205, ../sass/partials/pages/_home.scss */
 .thanks .content h2.title {
   line-height: 42px;
 }
-/* line 179, ../sass/partials/pages/_home.scss */
+/* line 208, ../sass/partials/pages/_home.scss */
 .thanks .content h2.title .talk-me-up {
   position: relative;
   padding-top: 45px;
   color: #30a596;
 }
-/* line 184, ../sass/partials/pages/_home.scss */
+/* line 213, ../sass/partials/pages/_home.scss */
 .thanks .content h2.title .talk-me-up .logo {
   position: absolute;
   top: 10px;
@@ -664,13 +706,13 @@ input[type="checkbox"]:checked + .label-text:before {
 }
 
 /* charm */
-/* line 203, ../sass/partials/pages/_home.scss */
+/* line 232, ../sass/partials/pages/_home.scss */
 .factors .content .factors-container {
   margin-top: 30px;
   width: 60%;
   margin: auto;
 }
-/* line 209, ../sass/partials/pages/_home.scss */
+/* line 238, ../sass/partials/pages/_home.scss */
 .factors .content .factors-container .btn-factors {
   background: #b7a6f6;
   color: #0a1a28;
@@ -680,17 +722,21 @@ input[type="checkbox"]:checked + .label-text:before {
 }
 
 /* page Tips */
-/* line 230, ../sass/partials/pages/_home.scss */
+/* line 259, ../sass/partials/pages/_home.scss */
+.tips .content h2.title {
+  font-size: 25px;
+}
+/* line 263, ../sass/partials/pages/_home.scss */
 .tips .content .factors-container {
   margin-top: 30px;
   width: 60%;
   margin: auto;
 }
-/* line 235, ../sass/partials/pages/_home.scss */
+/* line 268, ../sass/partials/pages/_home.scss */
 .tips .content .factors-container .btns {
   margin-top: 30px;
 }
-/* line 238, ../sass/partials/pages/_home.scss */
+/* line 271, ../sass/partials/pages/_home.scss */
 .tips .content .factors-container .btns .btn-tips {
   background: #30a596;
   color: #0a1a28;
@@ -698,7 +744,7 @@ input[type="checkbox"]:checked + .label-text:before {
   font-weight: 700;
   width: 30%;
 }
-/* line 246, ../sass/partials/pages/_home.scss */
+/* line 279, ../sass/partials/pages/_home.scss */
 .tips .content .factors-container .btns .btn-tips .sub-text {
   font-size: 10px;
   font-weight: 500;
@@ -706,11 +752,11 @@ input[type="checkbox"]:checked + .label-text:before {
 }
 
 /* page contact & share */
-/* line 267, ../sass/partials/pages/_home.scss */
+/* line 300, ../sass/partials/pages/_home.scss */
 .contact .content {
   padding: 40px  15px;
 }
-/* line 271, ../sass/partials/pages/_home.scss */
+/* line 304, ../sass/partials/pages/_home.scss */
 .contact .content .form-container {
   width: 42%;
   background: #30a596;
@@ -718,28 +764,28 @@ input[type="checkbox"]:checked + .label-text:before {
   padding: 5%;
   margin: auto;
 }
-/* line 279, ../sass/partials/pages/_home.scss */
+/* line 312, ../sass/partials/pages/_home.scss */
 .contact .content .form-container label {
   font-weight: 300;
   margin-top: 14px;
   font-size: 16px;
 }
-/* line 285, ../sass/partials/pages/_home.scss */
+/* line 318, ../sass/partials/pages/_home.scss */
 .contact .content .form-container input {
   border-radius: 0;
 }
-/* line 290, ../sass/partials/pages/_home.scss */
+/* line 323, ../sass/partials/pages/_home.scss */
 .contact .content .form-container .sign-in {
   font-size: 14px;
   font-weight: 300;
   margin-top: 25px;
   margin-bottom: 15px;
 }
-/* line 298, ../sass/partials/pages/_home.scss */
+/* line 331, ../sass/partials/pages/_home.scss */
 .contact .content .form-container .social-media a {
   padding: 0 5px;
 }
-/* line 304, ../sass/partials/pages/_home.scss */
+/* line 337, ../sass/partials/pages/_home.scss */
 .contact .content .share-container {
   width: 40%;
   background: #30a596;
@@ -747,30 +793,30 @@ input[type="checkbox"]:checked + .label-text:before {
   padding: 2% 1% 5% 1%;
   margin: auto;
 }
-/* line 311, ../sass/partials/pages/_home.scss */
+/* line 344, ../sass/partials/pages/_home.scss */
 .contact .content .share-container h2 {
   font-size: 26px;
 }
-/* line 315, ../sass/partials/pages/_home.scss */
+/* line 348, ../sass/partials/pages/_home.scss */
 .contact .content .share-container h3 {
   font-size: 18px;
   margin: 0;
   font-weight: 200;
 }
-/* line 321, ../sass/partials/pages/_home.scss */
+/* line 354, ../sass/partials/pages/_home.scss */
 .contact .content .share-container .row {
   margin-top: 30px;
 }
-/* line 323, ../sass/partials/pages/_home.scss */
+/* line 356, ../sass/partials/pages/_home.scss */
 .contact .content .share-container .row a {
   padding: 0 15px;
 }
-/* line 328, ../sass/partials/pages/_home.scss */
+/* line 361, ../sass/partials/pages/_home.scss */
 .contact .content .share-container .share-copy {
   margin: 20px 0;
   font-size: 20px;
 }
-/* line 333, ../sass/partials/pages/_home.scss */
+/* line 368, ../sass/partials/pages/_home.scss */
 .contact .content .share-container .share-url {
   color: #000;
   padding: 5px 15px;
@@ -778,4 +824,11 @@ input[type="checkbox"]:checked + .label-text:before {
   font-weight: 600;
   width: 80%;
   font-size: 25px;
+}
+/* line 382, ../sass/partials/pages/_home.scss */
+.contact .content .share-container .btn-url {
+  padding: 15px 20px;
+  font-size: 20px;
+  background: #83aaec;
+  color: #0a2645;
 }
