--- a/demo/templates/share.html
+++ b/demo/templates/share.html
@@ -2,20 +2,6 @@
 
 {% block content %}
 <div class="contact">
-    <div class="loader-wrap">
-        <div class="loader">
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-        </div>
-    </div>
     <div class="container rect2">
         {% include "header.html" %}
         <div class="text-center content">
@@ -24,19 +10,31 @@
                 <h3>Activate smart coach TalkMeUp to boost my charm.</h3>
                 <div class="row">
                     <div class="col-sm-12">
-                        <a href=""><i class="icons-facebook"></i></a>
-                        <a href=""><i class="icons-twitter"></i></a>
-                        <a href=""><i class="icons-google"></i></a>
-                        <a href=""><i class="icons-wechat"></i></a>
+                        <a href="https://facebook.com/talkmeup"><i class="icons-facebook"></i></a>
+                        <a href="https://twitter.com/talkmeup"><i class="icons-twitter"></i></a>
+                        <a href="https://linkedin.com/talkmeup"><i class="icons-linkedin"></i></a>
                     </div>
                     <div class="clearfix"></div>
                     <div class="text-center">
                         <p class="share-copy">Copy URL to share!</p>
-                        <input class="share-url" type="text" value="http://talkmeUp.co/charmtect">
+                        <div><button class="btn btn-url" id="get-url" data-clipboard-text="​http://talkmeup.co/demo">Get URL</button></div>
+                        <input id="share-url" class="share-url" value="​http://talkmeup.co/demo" style="display: none">
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+{% endblock %}
+{% block javascript %}
+    {% load static %}
+<script src="{% static 'js/vendor/clipboard.min.js' %}"></script>
+<script>
+    var clipboard = new Clipboard('#get-url');
+
+    clipboard.on('success', function(e) {
+        $('#get-url').fadeOut();
+        $(".share-url").delay(1000).fadeIn(10);
+    });
+</script>
 {% endblock %}
