--- a/demo/templates/tips.html
+++ b/demo/templates/tips.html
@@ -2,26 +2,12 @@
 
 {% block content %}
 <div class="tips">
-    <div class="loader-wrap">
-        <div class="loader">
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-            <span class="loader-item"></span>
-        </div>
-    </div>
     <div class="container rect1">
         {% include "header.html" %}
         <div class="text-center content">
             <h2 class="title">
-                <span class="fun-text">TalkMeUp</span> has tips for you<br>
-                based on your performance.
+                <div><span class="fun-text">TalkMeUp</span> has tips for you</div>
+                <div>based on your performance.</div>
             </h2>
             <div class="factors-container">
                 <div class="row text-left">
@@ -46,15 +32,16 @@
                     <div class="col-sm-8"></div>
                 </div>
                 <div class="btns">
-                    <a class="btn btn-tips pull-left" href="{% url "signup" %}">
+                    <a class="btn btn-tips pull-left">
                         Sign up
-                        <div class="sub-text"><span>For more personalized </span><span> coaching from</span>
+                        <div class="sub-text">
+                            <span>For more from </span>
                             <div> TalkMeUp!</div>
                         </div>
                     </a>
                     <a class="btn btn-tips pull-right" href="{% url "demo:share" %}">
                         Share
-                        <div class="sub-text">TalkMeUp CharmTect</div>
+                        <div class="sub-text">TalkMeUp with friends</div>
                     </a>
                     <div class="clearfix"></div>
                 </div>
