--- a/demo/templates/tips.html
+++ b/demo/templates/tips.html
@@ -32,7 +32,7 @@
                     <div class="col-sm-8"></div>
                 </div>
                 <div class="btns">
-                    <a class="btn btn-tips pull-left">
+                    <a class="btn btn-tips pull-left" href="{% url "signup" %}">
                         Sign up
                         <div class="sub-text">
                             <span>For more from </span>
