link demo, remove upload button

--- a/demo/templates/about-you.html
+++ b/demo/templates/about-you.html
@@ -16,11 +16,7 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="btns">
-                    <button id="record" class="pull-left record">Record</button>
-                    <label class="btn-upload pull-right">
-                        <input id="file-upload" type="file" name="fileupload">
-                        <button class="upload">Upload</button>
-                    </label>
+                    <button id="record" class="record">Record</button>
                 </div>
                 <div class="clearfix"></div>
             </div>
