--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -74,7 +74,7 @@
           <li><a href="#" data-toggle="modal" data-target="#share">Share</a></li>
       </ul>
       <!-- <div id="trydemo"></div> -->
-      <a href="#" id="corner-ad" data-toggle="modal" data-target="#demo" class="xx">
+      <a href="{% url "demo:index" %}" id="corner-ad" class="xx">
         <img src="{% static 'icon/demo.png' %}" id="yy" title="Signup" width="200" height="200"/>
       </a>
 
