--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -41,8 +41,8 @@
 
 <nav class="navbar navbar-default navbar-fixed-top nav-color">
   <div class="container-fluid">
-<a href="#" id="corner-ad2" data-toggle="modal" data-target="#demo" class="visible-xs zz">
-<img src="{% static 'icon/demo.png' %}" id="ff" title="Signup" width="200" height="200"/>
+<a href="{% url "demo:index" %}" id="corner-ad2" class="visible-xs zz">
+  <img src="{% static 'icon/demo.png' %}" id="ff" title="Demo" width="200" height="200"/>
 </a>
     <div class="navbar-header" id="ButtonForScroll">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="margin-right: 130px;">
@@ -75,7 +75,7 @@
       </ul>
       <!-- <div id="trydemo"></div> -->
       <a href="{% url "demo:index" %}" id="corner-ad" class="xx">
-        <img src="{% static 'icon/demo.png' %}" id="yy" title="Signup" width="200" height="200"/>
+        <img src="{% static 'icon/demo.png' %}" id="yy" title="Demo" width="200" height="200"/>
       </a>
 
       </div>
