update demo link to https

--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -41,7 +41,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top nav-color">
   <div class="container-fluid">
-<a href="{% url "demo:index" %}" id="corner-ad2" class="visible-xs zz">
+<a href="https://talkmeup.co/demo" id="corner-ad2" class="visible-xs zz">
   <img src="{% static 'icon/demo.png' %}" id="ff" title="Demo" width="200" height="200"/>
 </a>
     <div class="navbar-header" id="ButtonForScroll">
@@ -74,7 +74,7 @@
           <li><a href="#" data-toggle="modal" data-target="#share">Share</a></li>
       </ul>
       <!-- <div id="trydemo"></div> -->
-      <a href="{% url "demo:index" %}" id="corner-ad" class="xx">
+      <a href="https://talkmeup.co/demo" id="corner-ad" class="xx">
         <img src="{% static 'icon/demo.png' %}" id="yy" title="Demo" width="200" height="200"/>
       </a>
 
