--- a/demo/templates/check.html
+++ b/demo/templates/check.html
@@ -5,7 +5,7 @@
         <div class="container rect1">
             {% include "header.html" %}
             <div class="text-center content">
-                <h2 class="title">I'm more charismatic than <span class="orange-text bold">XX%</span> of the population!</h2>
+                <h2 class="title">I'm more charismatic than <span class="orange-text bold">{{percentage}}%</span> of the population!</h2>
                 <div class="check-btn">
                     <a class="btn" href="{% url "demo:factors" performance_key %}"> Check My Charisma Factors</a>
                 </div>
