update wording and links

--- a/demo/templates/share.html
+++ b/demo/templates/share.html
@@ -17,8 +17,8 @@
                     <div class="clearfix"></div>
                     <div class="text-center">
                         <p class="share-copy">Copy URL to share!</p>
-                        <div><button class="btn btn-url" id="get-url" data-clipboard-text="​http://talkmeup.co/demo">Get URL</button></div>
-                        <input id="share-url" class="share-url" value="​http://talkmeup.co/demo" style="display: none">
+                        <div><button class="btn btn-url" id="get-url" data-clipboard-text="​https://talkmeup.co/demo">Get URL</button></div>
+                        <input id="share-url" class="share-url" value="​https://talkmeup.co/demo" style="display: none">
                     </div>
                 </div>
             </div>
