--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -7,7 +7,7 @@
     <!-- For Facebook -->
     <meta property="og:title" content="TalkMeUp -- Succeed through Better Communication" />
     <meta property="og:image" content="http://talkmeup.co/static/icon/logo.png" />
-    <meta property="og:url" content="http://talkmeup.co/" />
+    <meta property="og:url" content="https://talkmeup.co/" />
     <meta property="og:description" content="TalkMeUp is an AI coach that gives you on-demand and personalized coaching on your communication skills at 1/100th the cost of world’s best coaches!" />
 
 
@@ -129,7 +129,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-1">
-                <div class="fb-share-button" data-href="http://talkmeup.co" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Ftalkmeup.co%2F&amp;src=sdkpreparse">Share</a></div>
+                <div class="fb-share-button" data-href="https://talkmeup.co" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftalkmeup.co%2F&amp;src=sdkpreparse">Share</a></div>
               </div>
               <div class="col-sm-1">
                 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
