--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -42,7 +42,7 @@
 <nav class="navbar navbar-default navbar-fixed-top nav-color">
   <div class="container-fluid">
 <a href="#" id="corner-ad2" data-toggle="modal" data-target="#demo" class="visible-xs zz">
-<img src="{% static 'icon/demo.png' %}" id="ff" title="Signup" width="200" height="200"/>
+<img src="{% static 'icon/demo_frame20.gif' %}" id="ff" title="Signup" width="200" height="200"/>
 </a>
     <div class="navbar-header" id="ButtonForScroll">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="margin-right: 130px;">
@@ -75,7 +75,7 @@
       </ul>
       <!-- <div id="trydemo"></div> -->
       <a href="#" id="corner-ad" data-toggle="modal" data-target="#demo" class="xx">
-        <img src="{% static 'icon/demo.png' %}" id="yy" title="Signup" width="200" height="200"/>
+        <img src="{% static 'icon/demo_frame20.gif' %}" id="yy" title="Signup" width="200" height="200"/>
       </a>
 
       </div>
