--- a/demo/templates/share.html
+++ b/demo/templates/share.html
@@ -10,9 +10,9 @@
                 <h3>Activate smart coach TalkMeUp to boost my charm.</h3>
                 <div class="row">
                     <div class="col-sm-12">
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=%E2%80%8Bhttps%3A//talkmeup.co/demo"><i class="icons-facebook"></i></a>
-                        <a href="https://twitter.com/home?status=%E2%80%8Bhttps%3A//talkmeup.co/demo"><i class="icons-twitter"></i></a>
-                        <a href="https://www.linkedin.com/shareArticle?mini=true&url=%E2%80%8Bhttps%3A//talkmeup.co/demo&title=Talk%20me%20up&summary=&source="><i class="icons-linkedin"></i></a>
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//talkmeup.co/demo"><i class="icons-facebook"></i></a>
+                        <a href="https://twitter.com/home?status=https%3A//talkmeup.co/demo"><i class="icons-twitter"></i></a>
+                        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//talkmeup.co/demo&title=Talk%20me%20up&summary=&source="><i class="icons-linkedin"></i></a>
                     </div>
                     <div class="clearfix"></div>
                     <div class="text-center">
