- change open graph title/description

--- a/demo/templates/base_.html
+++ b/demo/templates/base_.html
@@ -6,8 +6,8 @@
         <title>talkmeup</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="On-demand, effective and personalized coaching on communication skills at 1/100th the cost of the world's best professional coaches.">
-        <meta property="og:title" content="Talk me up" />
-        <meta property="og:description" content="On-demand, effective and personalized coaching on communication skills at 1/100th the cost of the world's best professional coaches." />
+        <meta property="og:title" content="How Charismatic Am I?" />
+        <meta property="og:description" content="AI based analysis powered by TalkMeUp.co" />
         <meta property="og:url" content="​https://talkmeup.co/demo" />
         {% load static %}<meta property="og:image" content="{% static 'images/logo.png' %}" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
