- HTML media capture for mobile/tablet device and Safari browsers - change open graph description

--- a/demo/templates/about-you.html
+++ b/demo/templates/about-you.html
@@ -41,9 +41,6 @@
 {% csrf_token %}
 <script src="{% static "js/video_capture.js" %}"></script>
 {% else %}
-<script type="text/javascript">
-
-</script>
-
+<script type="text/javascript"></script>
 {% endif %}
 {% endblock %}
