--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -42,12 +42,8 @@
 <nav class="navbar navbar-default navbar-fixed-top nav-color">
   <div class="container-fluid">
 
-<a href="#" id="corner-ad2" data-toggle="modal" data-target="#demo" class="visible-xs zz">
-<img src="{% static 'icon/demo_frame20.gif' %}" id="ff" title="Signup" width="200" height="200"/>
-  
 <a href="https://talkmeup.co/demo" id="corner-ad2" class="visible-xs zz">
-  <img src="{% static 'icon/demo_frame20.gif' %}" id="ff" title="Demo" width="200" height="200"/>
-  
+  <img src="{% static 'icon/demo2.png' %}" id="ff" title="Demo" width="200" height="200"/>
 </a>
     <div class="navbar-header" id="ButtonForScroll">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="margin-right: 130px;">
@@ -80,12 +76,8 @@
       </ul>
       <!-- <div id="trydemo"></div> -->
 
-      <a href="#" id="corner-ad" data-toggle="modal" data-target="#demo" class="xx">
-        <img src="{% static 'icon/demo_frame20.gif' %}" id="yy" title="Signup" width="200" height="200"/>
-
       <a href="https://talkmeup.co/demo" id="corner-ad" class="xx">
-        <img src="{% static 'icon/demo_frame20.gif' %}" id="yy" title="Demo" width="200" height="200"/>
-
+        <img src="{% static 'icon/demo2.png' %}" id="yy" title="Demo" width="200" height="200"/>
       </a>
 
       </div>
