--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -73,7 +73,7 @@
             <br>
             <br>
             <br>
-            <p style="font-size: 22px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">Stating at <p style="font-size: 22px; color:#30A596; font-family:'Open Sans' script=latin rev=1; font-style:normal; letter-spacing: 1px;">$0 per month.</p>
+            <p style="font-size: 22px; color:#0A2645; font-family:'Open Sans' script=latin rev=1; font-weight:lighter; font-style:normal; letter-spacing: 1px;">Stating at <p style="font-size: 22px; color:#30A596; font-family:'Open Sans' script=latin rev=1; font-style:normal; letter-spacing: 1px;">0 per month.</p>
           </div>
     </center>
         </div>
