--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="TalkMeUp is an AI coach that gives you on-demand and personalized coaching on your communication skills at 1/100th the cost of world’s best coaches!" />
 
 
-    <title>TalkMeUp -- Powers up Your Success through Better Communication.</title>
+    <title>TalkMeUp -- Power up Your Success with Better Communication.</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
